added testing across different browsers in terminal added mark "smoke"

--- a/configurations/config.prod.env
+++ b/configurations/config.prod.env
@@ -1,3 +1,5 @@
 [settings]
 DEBUG=False
-LOGIN_URL = https://www.saucedemo-prod.com/
+LOGIN_URL=https://www.saucedemo-prod.com/
+VALID_USERNAME='standard_user'
+VALID_PASSWORD='secret_sauce'
